# django-admin-agent

./: 404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: release.yml  tests.yml
admin-wiring/: index.html
configuration/: index.html
django_admin_agent/: __init__.py  conf.py  urls.py
django_admin_agent/admin/: build_route_map.py  build_sidebar_context.py  build_skills.py  build_tool_summaries.py  sidebar_admin_site.py
django_admin_agent/static/django_admin_agent/: admin_agent.js  admin_tools.js  ag-ui-web-component.bundle.js  unfold_shim.js
django_admin_agent/templates/django_admin_agent/: sidebar.html
django_admin_agent/templatetags/: django_admin_agent.py
django_admin_agent/tools/: register.py  utils.py
django_admin_agent/tools/introspect/: get_settings_summary.py  inspect_modeladmin.py  list_admin_models.py  list_installed_apps.py  list_models.py  list_signals.py  list_urls.py  register.py
django_admin_agent/tools/shell/: count_model.py  get_model_instance.py  inspect_model_schema.py  query_model.py  register.py
docs/: admin-wiring.md  configuration.md  index.md  installation.md  reference.md  tools.md  unfold.md
installation/: index.html
reference/: index.html
search/: search_index.json
tests/: conftest_settings.py  test_conf.py  test_urls.py  test_version.py
tests/admin/: test_build_route_map.py  test_build_sidebar_context.py  test_build_skills.py  test_build_tool_summaries.py  test_sidebar_admin_site.py  urls_endpoint_only.py  urls_no_admin.py
tests/e2e/: conftest.py  scripted_model.py  settings.py  test_vanilla.py  urls.py
tests/e2e/templates/admin/: base_site.html
tests/templatetags/: test_django_admin_agent.py
tests/testapp/: admin.py  apps.py  models.py  urls.py
tests/testapp/migrations/: 0001_initial.py
tests/tools/: test_register.py  test_utils.py
tests/tools/introspect/: test_introspect_tools.py
tests/tools/shell/: test_shell_tools.py
tools/: index.html
unfold/: index.html
